--- a/frontend/src/props/Skills/SkillsProps.module.css
+++ b/frontend/src/props/Skills/SkillsProps.module.css
@@ -1,6 +1,6 @@
 .container {
     display: flex;
-    padding: 0px 2px 2px 2px;
+    padding: 0px 2px 2px 1px;
     margin: 0;
 }
 .skills {
